[package]
authors = ["Max Rosin"]
description = "A controller to keep hcloud firewall rules up to date with dynamic IP addresses."
edition = "2021"
license = "MIT"
name = "hcloud-firewall-controller"
publish = false
repository = "https://github.com/ekeih/hcloud-firewall-controller"
version = "0.0.1"

[dependencies]
clap = { version = "4.5.1", features = ["derive", "env"] }
env_logger = "0.11.2"
ipnet = "2.9.0"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
